Bug 136919 - Table size color is inconsistent with Linux dark theme
Summary: Table size color is inconsistent with Linux dark theme
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All All
: low minor
Assignee: Rafael Lima
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords:
: 148376 (view as bug list)
Depends on:
Blocks: Linux-Dark-Mode
  Show dependency treegraph
 
Reported: 2020-09-21 10:59 UTC by medmedin2014
Modified: 2022-10-09 09:37 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Table size color is inconsistent with dark theme (111.33 KB, image/png)
2020-09-21 10:59 UTC, medmedin2014
Details

Note You need to log in before you can comment on or make changes to this bug.
Description medmedin2014 2020-09-21 10:59:11 UTC
Created attachment 165718 [details]
Table size color is inconsistent with dark theme

The size of the table is not displayed correctly with dark theme. See attached image for more info.

Version: 7.0.1.2
Build ID: 00(Build:2)
CPU threads: 2; OS: Linux 5.4; UI render: default; VCL: kf5
Locale: en-US (en_US.UTF-8); UI: en-US
=7.0.1-1
Calc: threaded

Operating System: Manjaro Linux
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.73.0
Qt Version: 5.15.0
Kernel Version: 5.4.64-1-MANJARO
OS Type: 64-bit
Comment 1 Dieter 2021-04-07 08:37:31 UTC Comment hidden (obsolete)
Comment 2 medmedin2014 2021-04-07 09:56:06 UTC
(In reply to Dieter from comment #1)
> I can't confirm it with
> 
> Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
> Build ID: f96004096268f5e71120678e32fc8c74055819aa
> CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL:
> win
> Locale: de-DE (de_DE); UI: en-GB
> Calc: CL
> 
> Just for clarification: "Dark theme" is Dark Theme of LO (Tools => Options
> => LibreOffice => Personalisation => Preinstalled Themes => Dark), correct?
> => NEEDINFO

No, not the dark theme of LO (which is just a simple color applied to ribbon), this bug is specific to Linux and not Windows, when I set dark theme for my Linux desktop (dark breeze theme on Manjaro KDE) then LO show wrong color for table size like what you see in screenshot. Normally LO follows perfectly native Linux themes which gives it better look and coherent experience to user.
Comment 3 Dieter 2021-04-07 10:27:01 UTC Comment hidden (obsolete)
Comment 4 medmedin2014 2021-04-07 10:30:33 UTC
(In reply to Dieter from comment #3)
> (In reply to medmedin2014 from comment #2)
> > this bug is specific to Linux and not Windows, when I set dark
> > theme for my Linux desktop (dark breeze theme on Manjaro KDE)
> 
> Thanks for clarification. I suppose it's the same with bug 136921 and
> 136928, so I've changed them also, to make it more clear, that it is about
> Linux. Please correct it, if I'm wrong.

Yeah that's right, thanks for changing them.
Comment 5 Buovjaga 2021-07-19 09:30:16 UTC
Repro

NixOS
Version: 7.1.4.2 / LibreOffice Community
Build ID: 10(Build:2)
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Comment 6 Buovjaga 2021-08-14 17:18:40 UTC
Repro already with oldest in 6.3 bibisect repo and gtk3 UI
Comment 7 Timur 2022-09-12 14:59:46 UTC
*** Bug 148376 has been marked as a duplicate of this bug. ***
Comment 8 V Stuart Foote 2022-09-12 15:08:00 UTC Comment hidden (obsolete)
Comment 9 Dieter 2022-09-13 14:14:31 UTC
(In reply to V Stuart Foote from comment #8)
> Ok will set this to all like its dupe.

I think setting to "All" in the dupe was a mistake, since it is related to Linux Dark Mode and it's not possible to reproduce it with Windows.
Comment 10 V Stuart Foote 2022-09-13 17:12:41 UTC
(In reply to Dieter from comment #9)
> I think setting to "All" in the dupe was a mistake, since it is related to
> Linux Dark Mode and it's not possible to reproduce it with Windows.

No, as from dupe, on Windows builds 7.4.1.2 and current master against 7.5 the exact same issue is visible.  With Windows DE set to a 'Dark' color theme, the pop-up hint showing the table cell size is *not* legible showing dark fg text on a dark bg canvas.

Using the Tools -> Options -> Application Colors to set the "LibreOffice Dark" 'Color scheme' does not resolve.
Comment 11 Rafael Lima 2022-09-29 14:49:44 UTC
Patch available for review at

https://gerrit.libreoffice.org/c/core/+/140612
Comment 12 Commit Notification 2022-10-01 07:03:48 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/56ea2f069952d23e5b94689669a5ea18a505ea7e

tdf#136919 Fix table size label in dark mode

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Timur 2022-10-03 11:24:36 UTC
Looks good with KF5 dark, not sure why not closed. 
Should also be tested in Windows.
Comment 14 Timur 2022-10-03 12:26:50 UTC
aLSO GOOD in Windows dark mode.
Comment 15 Commit Notification 2022-10-03 13:46:52 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/61e27e85857f44ee6759baee196dfd951d04acfd

tdf#136919 Fix table size label in dark mode

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Dieter 2022-10-09 09:37:03 UTC
Timus, I take your feedback in comment 13 and comment 14 as verification. Please correct me, if I'm wrong

=> VERIFIED FIXED