tdf#136919 Fix table size label in dark mode

Change-Id: Ifd4d67fa8211cf703c5d5d6ea99a0f41bd427e1c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140612
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>